<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_primary"
    android:padding="24dp"
    tools:context=".UserActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/shopping_logo" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/welcome_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:hint="@string/hint_user_name"
        android:importantForAutofill="yes"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green_dark"
        android:text="@string/btn_enter"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
